--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -54,7 +54,7 @@ Instead of passing around a pointer to the current screen everywhere in your cod
 
 You update the physical screen using [[SDL_RenderPresent]], which replaces ```SDL_Flip``` and {{{SDL_UpdateRects}}}.
 
-```SDL_SetVideoMode``` from 1.2 is now just a compatibility function, you will not use it.
+```SDL_SetVideoMode``` from 1.2 is now just a compatibility function, you will not use it anymore.
 
 === Alpha-blending ===
 
