--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -32,7 +32,7 @@ The main change is the separation between software surfaces and hardware (accele
 
 Now, we have two structures:
 * [[SDL_Surface]]: software surfaces, working like in 1.2, but never accelerated
-* SDL_Texture: hardware surfaces, whose pixels are not directly accessible (not ```->pixels``` field)
+* SDL_Texture: hardware surfaces, whose pixels are not directly accessible (no ```->pixels``` field)
 
 Textures are typically OpenGL textures or X11 pixmaps, stored as near to the graphics hardware as possible.
 
