Simplify PeepEvent excerpt

--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -70,14 +70,14 @@ Events mask are now specified using intervals:
 
 ```
 # 1.2
-SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_EVENTMASK(SDL_MOUSEBUTTONDOWN)) > 0)
+SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_EVENTMASK(SDL_MOUSEBUTTONDOWN))
 ```
 
 becomes:
 
 ```
 # 1.3
-SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_MOUSEBUTTONDOWN, SDL_MOUSEBUTTONDOWN) > 0)
+SDL_PeepEvents(&event, 1, SDL_GETEVENT, SDL_MOUSEBUTTONDOWN, SDL_MOUSEBUTTONDOWN)
 ```
 
 == Keys ==
