--- a/MigrationGuide.mediawiki
+++ b/MigrationGuide.mediawiki
@@ -86,7 +86,7 @@ You'll note that there are two kinds of key numbers:
 * [[SDLKey]]: key codes, using SDL_Key's SDLK constants; note that SDLK_LAST disappeared, because new values cover most of 32bits. Keys associated with printable characters are compatible with Unicode UTF16.
 * [[SDL_scancode]]: scan codes, representing layout-independant key locations
 
-There is now a dedicated API for textual input (e.g. to enter a small text, rather than combining keys); check [[TextInput]] for an introduction.
+There is now a dedicated API for textual input (e.g. to enter a small text, rather than combining keys); check [[Tutorials/TextInput]] for an introduction.
 
 == Audio ==
 
