--- a/SDL_SetSurfaceBlendMode.mediawiki
+++ b/SDL_SetSurfaceBlendMode.mediawiki
@@ -18,7 +18,7 @@ int SDL_SetSurfaceBlendMode(SDL_Surface* surface,
 |the [[SDL_Surface]] to update
 |-
 |'''blendMode'''
-|the [[SDL_BlendMode]] to use for blit blending
+|the [[SDL_BlendMode]] to use for blit blending; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
@@ -30,7 +30,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+'''blendMode''' may be SDL_BLENDMODE_NONE or a mask of any of the other [[SDL_BlendMode]] values OR'd together: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_GetSurfaceBlendMode]]
