--- a/SDL_GetTextureBlendMode.mediawiki
+++ b/SDL_GetTextureBlendMode.mediawiki
@@ -17,7 +17,7 @@ int SDL_GetTextureBlendMode(SDL_Texture* texture,
 |the SDL_Texture to query
 |-
 |'''blendMode'''
-|a pointer filled in with the current [[SDL_BlendMode]]
+|a pointer filled in with the current [[SDL_BlendMode]]; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
@@ -29,7 +29,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+'''blendMode''' may be SDL_BLENDMODE_NONE or a mask of any of the other [[SDL_BlendMode]] values OR'd together: <<Include(SDL_BlendMode, , , from="== Values ==", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_SetTextureBlendMode]]
