--- a/SDL_PixelFormatEnumToMasks.mediawiki
+++ b/SDL_PixelFormatEnumToMasks.mediawiki
@@ -18,7 +18,7 @@ SDL_bool SDL_PixelFormatEnumToMasks(Uint32  format,
 == Function Parameters ==
 {|
 |'''format'''
-|an enumerated pixel format; see [[SDL_PixelFormatEnum]] for details
+|,,an enumerated pixel format; see,, one of the [[SDL_PixelFormatEnum]] values; see [[#Remarks|Remarks]] for details
 |-
 |'''bpp'''
 |a bits per pixel value; usually 15, 16, or 32
@@ -45,7 +45,8 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+'''format''' can be one of these values:
+<<Include(SDL_PixelFormatEnum, , , from="=== Pixel Format Values ===", to="== Code Examples ==")>>
 
 == Related Functions ==
 :[[SDL_MasksToPixelFormatEnum]]
