--- a/SDL_Surface.mediawiki
+++ b/SDL_Surface.mediawiki
@@ -1,6 +1,9 @@
 <!-- pragma section-numbers off -->
 <!-- pragma disable-camelcase -->
-'''DRAFT'''
+{|
+|<tablewidth="100%"style="color: rgb(255, 0, 0); text-align: center;">DRAFT 
+|}
+
 
 = SDL_Surface =
 A structure that contains a collection of pixels used in software blitting.
@@ -8,112 +11,111 @@ A structure that contains a collection of pixels used in software blitting.
 
 == Data Fields ==
 {|
-|<style="color: #808080;">Uint32
-|<style="color: #808080;">'''flags'''
-|<style="color: #808080;">internal
+|<style="color: rgb(128, 128, 128);">Uint32 
+|<style="color: rgb(128, 128, 128);">'''flags''' 
+|<style="color: rgb(128, 128, 128);">internal 
 |-
-|[[SDL_PixelFormat]]*
-|'''format'''
-|the format of the pixels stored in the surface; see [[SDL_PixelFormat]] for details (read-only)
+|[[SDL_PixelFormat]]* 
+|'''format''' 
+|the format of the pixels stored in the surface; see [[SDL_PixelFormat]] for details (read-only) 
 |-
-|int
-|'''w, h'''
-|the width and height in pixels (read-only)
+|int 
+|'''w, h''' 
+|the width and height in pixels (read-only) 
 |-
-|int
-|'''pitch'''
-|the length of a scanline in bytes (read-only)
+|int 
+|'''pitch''' 
+|the length of a scanline in bytes (read-only) 
 |-
-|void*
-|'''pixels'''
-|the pointer to the actual pixel data; the surface should be locked by [[SDL_LockSurface]]() before accessing this field (read-write)
+|void* 
+|'''pixels''' 
+|the pointer to the actual pixel data; the surface should be locked by [[SDL_LockSurface]]() before accessing this field (read-write) 
 |-
-|void*
-|'''userdata'''
-|an arbitrary pointer you can set (read-write)
+|void* 
+|'''userdata''' 
+|an arbitrary pointer you can set (read-write) 
 |-
-|<style="color: #808080;">int
-|<style="color: #808080;">'''locked'''
-|<style="color: #808080;">internal
+|<style="color: rgb(128, 128, 128);">int 
+|<style="color: rgb(128, 128, 128);">'''locked''' 
+|<style="color: rgb(128, 128, 128);">internal 
 |-
-|<style="color: #808080;">void*
-|<style="color: #808080;">'''lock_data'''
-|<style="color: #808080;">internal
+|<style="color: rgb(128, 128, 128);">void* 
+|<style="color: rgb(128, 128, 128);">'''lock_data''' 
+|<style="color: rgb(128, 128, 128);">internal 
 |-
-|[[SDL_Rect]]
-|'''clip_rect'''
-|an [[SDL_Rect]] structure used to clip blits to the surface which can be set by [[SDL_SetClipRect]]() (read-only)
+|[[SDL_Rect]] 
+|'''clip_rect''' 
+|an [[SDL_Rect]] structure used to clip blits to the surface which can be set by [[SDL_SetClipRect]]() (read-only) 
 |-
-|<style="color: #808080;">SDL_BlitMap*
-|<style="color: #808080;">'''map'''
-|<style="color: #808080;">internal; info for fast blit mapping to other surfaces
+|<style="color: rgb(128, 128, 128);">SDL_BlitMap* 
+|<style="color: rgb(128, 128, 128);">'''map''' 
+|<style="color: rgb(128, 128, 128);">internal; info for fast blit mapping to other surfaces 
 |-
-|<style="color: #808080;">int
-|<style="color: #808080;">'''format_version'''
-|<style="color: #808080;">internal; bumped at every change to invalidate blit maps''
+|<style="color: rgb(128, 128, 128);">int 
+|<style="color: rgb(128, 128, 128);">'''format_version''' 
+|<style="color: rgb(128, 128, 128);">internal; bumped at every change to invalidate blit maps 
 |-
-|int
-|'''refcount'''
-|reference count that can be incremented by the application
+|int 
+|'''refcount''' 
+|reference count that can be incremented by the application 
 |}
+
 
 == Code Examples ==
 ```c++
 You can add your code example here
 ```
 
-
 == Remarks ==
 ''You can add useful comments here''
 
-
 == Related Structures ==
-:[[SDL_SDL_PixelFormat]]
-:[[SDL_Rect]]
+: [[SDL_SDL_PixelFormat]]
+: [[SDL_Rect]]
 
 == Related Functions ==
-:[[SDL_BlendFillRect]]
-:[[SDL_BlendFillRects]]
-:[[SDL_BlendLine]]
-:[[SDL_BlendLines]]
-:[[SDL_BlendPoint]]
-:[[SDL_BlendPoints]]
-:[[SDL_BlendRect]]
-:[[SDL_BlendRects]]
-:[[SDL_ConvertSurface]]
-:[[SDL_CreateRGBSurface]]
-:[[SDL_CreateRGBSurfaceFrom]]
-:[[SDL_DrawLine]]
-:[[SDL_DrawLines]]
-:[[SDL_DrawPoint]]
-:[[SDL_DrawPoints]]
-:[[SDL_DrawRect]]
-:[[SDL_DrawRects]]
-:[[SDL_FillRect]]
-:[[SDL_FillRects]]
-:[[SDL_FreeSurface]]
-:[[SDL_GetClipRect]]
-:[[SDL_GetColorKey]]
-:[[SDL_GetSurfaceAlphaMod]]
-:[[SDL_GetSurfaceBlendMode]]
-:[[SDL_GetSurfaceColorMod]]
-:[[SDL_GetSurfaceScaleMode]]
-:[[SDL_LoadBMP_RW]]
-:[[SDL_LockSurface]]
-:[[SDL_LowerBlit]]
-:[[SDL_MUSTLOCK]]
-:[[SDL_SaveBMP_RW]]
-:[[SDL_SetClipRect]]
-:[[SDL_SetColorKey]]
-:[[SDL_SetSurfaceAlphaMod]]
-:[[SDL_SetSurfaceBlendMode]]
-:[[SDL_SetSurfaceColorMod]]
-:[[SDL_SetSurfacePalette]]
-:[[SDL_SetSurfaceRLE]]
-:[[SDL_SetSurfaceScaleMode]]
-:[[SDL_SoftStretch]]
-:[[SDL_UnlockSurface]]
-:[[SDL_UpperBlit]]
+: [[SDL_BlendFillRect]]
+: [[SDL_BlendFillRects]]
+: [[SDL_BlendLine]]
+: [[SDL_BlendLines]]
+: [[SDL_BlendPoint]]
+: [[SDL_BlendPoints]]
+: [[SDL_BlendRect]]
+: [[SDL_BlendRects]]
+: [[SDL_ConvertSurface]]
+: [[SDL_CreateRGBSurface]]
+: [[SDL_CreateRGBSurfaceFrom]]
+: [[SDL_DrawLine]]
+: [[SDL_DrawLines]]
+: [[SDL_DrawPoint]]
+: [[SDL_DrawPoints]]
+: [[SDL_DrawRect]]
+: [[SDL_DrawRects]]
+: [[SDL_FillRect]]
+: [[SDL_FillRects]]
+: [[SDL_FreeSurface]]
+: [[SDL_GetClipRect]]
+: [[SDL_GetColorKey]]
+: [[SDL_GetSurfaceAlphaMod]]
+: [[SDL_GetSurfaceBlendMode]]
+: [[SDL_GetSurfaceColorMod]]
+: [[SDL_GetSurfaceScaleMode]]
+: [[SDL_LoadBMP_RW]]
+: [[SDL_LockSurface]]
+: [[SDL_LowerBlit]]
+: [[SDL_MUSTLOCK]]
+: [[SDL_SaveBMP_RW]]
+: [[SDL_SetClipRect]]
+: [[SDL_SetColorKey]]
+: [[SDL_SetSurfaceAlphaMod]]
+: [[SDL_SetSurfaceBlendMode]]
+: [[SDL_SetSurfaceColorMod]]
+: [[SDL_SetSurfacePalette]]
+: [[SDL_SetSurfaceRLE]]
+: [[SDL_SetSurfaceScaleMode]]
+: [[SDL_SoftStretch]]
+: [[SDL_UnlockSurface]]
+: [[SDL_UpperBlit]]
 
 ----
-[[CategoryStruct]], [[CategorySurface]]
+CategoryStruct, CategorySurface
