--- a/SDL_Surface.mediawiki
+++ b/SDL_Surface.mediawiki
@@ -25,7 +25,7 @@ A structure that contains a collection of pixels used in software blitting.
 |-
 |void* 
 |'''pixels''' 
-|the pointer to the actual pixel data; the surface should be locked by [[SDL_LockSurface]]() before accessing this field (read-write) 
+|the pointer to the actual pixel data; see [[#Remarks|Remarks]] for details (read-write) 
 |-
 |void* 
 |'''userdata''' 
@@ -33,11 +33,11 @@ A structure that contains a collection of pixels used in software blitting.
 |-
 |<style="color: rgb(128, 128, 128);">int 
 |<style="color: rgb(128, 128, 128);">'''locked''' 
-|<style="color: rgb(128, 128, 128);">internal 
+|<style="color: rgb(128, 128, 128);">internal; used for surfaces that require locking 
 |-
 |<style="color: rgb(128, 128, 128);">void* 
 |<style="color: rgb(128, 128, 128);">'''lock_data''' 
-|<style="color: rgb(128, 128, 128);">internal 
+|<style="color: rgb(128, 128, 128);">internal; used for surfaces that require locking 
 |-
 |[[SDL_Rect]] 
 |'''clip_rect''' 
@@ -63,7 +63,7 @@ You can add your code example here
 ```
 
 == Remarks ==
-''You can add useful comments here''
+With most surfaces you can access the pixels directly,  Surfaces that have been run-length-encoded by [[SDL_SetSurfaceRLE]]() should be locked by [[SDL_LockSurface]]() before accessing this field.  When you are done accessing the pixels they should be unlocked with [[SDL_UnlockSurface]]() before blitting.
 
 == Related Functions ==
 : [[SDL_BlendFillRect]]
