--- a/SDL_BlendMode.mediawiki
+++ b/SDL_BlendMode.mediawiki
@@ -2,7 +2,7 @@
 <!-- pragma disable-camelcase -->
 
 = SDL_BlendMode =
-An enumeration of blend modes used in texture copying and drawing operations.
+An enumeration of blend modes used in [[SDL_RenderCopy]]() and drawing operations.
 
 
 == Values ==
@@ -37,6 +37,7 @@ You can add your code example here
 == Related Functions ==
 :[[SDL_GetRenderDrawBlendMode]]
 :[[SDL_GetTextureBlendMode]]
+:[[SDL_RenderCopy]]
 :[[SDL_SetRenderDrawBlendMode]]
 :[[SDL_SetTextureBlendMode]]
 
