--- a/SDL_GetSurfaceBlendMode.mediawiki
+++ b/SDL_GetSurfaceBlendMode.mediawiki
@@ -18,7 +18,7 @@ int SDL_GetSurfaceBlendMode(SDL_Surface*   surface,
 |the [[SDL_Surface]] structure to query
 |-
 |'''blendMode'''
-|a pointer filled in with the current [[SDL_BlendMode]] structure; see [[#Remarks|Remarks]] for details
+|a pointer filled in with the current [[SDL_BlendMode]] ,,enumeration,, ^value^; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
