update content - add RF

--- a/SDL_BlendMode.mediawiki
+++ b/SDL_BlendMode.mediawiki
@@ -35,6 +35,14 @@ You can add your code example here
 :[[SDL_RendererInfo]]
 
 == Related Functions ==
+:[[SDL_BlendFillRect]]
+:[[SDL_BlendFillRects]]
+:[[SDL_BlendLine]]
+:[[SDL_BlendLines]]
+:[[SDL_BlendPoint]]
+:[[SDL_BlendPoints]]
+:[[SDL_BlendRect]]
+:[[SDL_BlendRects]]
 :[[SDL_GetRenderDrawBlendMode]]
 :[[SDL_GetSurfaceBlendMode]]
 :[[SDL_GetTextureBlendMode]]
