--- a/SDL_RendererInfo.mediawiki
+++ b/SDL_RendererInfo.mediawiki
@@ -65,7 +65,7 @@ You can add your code example here
 :[[SDL_PixelFormatEnum]]
 :[[SDL_RendererFlags]]
 :[[SDL_TextureModulate]]
-:[[SDL_TextureScaleMode]]
+:[[SDL_ScaleMode]]
 
 == Related Functions ==
 :[[SDL_GetRenderDriverInfo]]
