--- a/SDL_CreateRGBSurfaceFrom.mediawiki
+++ b/SDL_CreateRGBSurfaceFrom.mediawiki
@@ -3,7 +3,7 @@
 '''DRAFT'''
 
 = SDL_CreateRGBSurfaceFrom =
-Use this function to allocate ,,and free,, an RGB surface ^from pixels^.
+Use this function to allocate and free an RGB surface ^from pixels???^.
 
 
 == Syntax ==
@@ -22,13 +22,13 @@ SDL_Surface* SDL_CreateRGBSurfaceFrom (void*  pixels,
 == Function Parameters ==
 {|
 |'''pixels'''
-|,,a pointer to ,,a set of pixels to use on the surface
+|a pointer to a set of pixels to use on the surface
 |-
 |'''width'''
-|the width of the surface
+|the width of the surface ^(in pixels)^
 |-
 |'''height'''
-|the height of the surface
+|the height of the surface ^(in pixels)^
 |-
 |'''depth'''
 |the depth of the surface in bits; see [[#Remarks|Remarks]] for details
@@ -50,7 +50,7 @@ SDL_Surface* SDL_CreateRGBSurfaceFrom (void*  pixels,
 |}
 
 == Return Value ==
-Returns a pointer to an [[SDL_Surface]] to be created.  If the function runs out of memory, it will return NULL. 
+Returns a pointer to ,,an,, ^the^ [[SDL_Surface]] structure ,,to be,, ^that is^ created.  If the function runs out of memory it will return NULL. 
 
 == Code Examples ==
 ```c++
