--- a/SDL_FillRects.mediawiki
+++ b/SDL_FillRects.mediawiki
@@ -17,16 +17,16 @@ int SDL_FillRects(SDL_Surface*     dst,
 == Function Parameters ==
 {|
 |'''dst'''
-|the destination [[SDL_Surface]] containing the rectangles
+|the destination [[SDL_Surface]] structure ,,containing the rectangles,,
 |-
 |'''rects'''
-|an array of [[SDL_Rect]] structures representing the rectangles to fill
+|an array of [[SDL_Rect]] structures representing the rectangles to fill^ , or NULL to fill the entire render target^
 |-
 |'''count'''
 |the number of rectangles in the array
 |-
 |'''color'''
-|the color to fill the rectangles with
+|the color to fill the rectangles with; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
