--- a/SDL_FreeSurface.mediawiki
+++ b/SDL_FreeSurface.mediawiki
@@ -14,7 +14,7 @@ void SDL_FreeSurface(SDL_Surface* surface)
 == Function Parameters ==
 {|
 |'''surface'''
-|^the [[SDL_Surface]] to free^ ''--or--'' *,,a pointer to,, the surface to delete; ,,it is safe to pass NULL as surface,,, ^if NULL^ ,,in which case,, [[SDL_FreeSurface]]() will do nothing*
+|the [[SDL_Surface]] structure ^holding resources to be freed^ ''--or--'' *,,a pointer to,, the surface to delete; ,,it is safe to pass NULL as surface, in which case,, ^if NULL^ [[SDL_FreeSurface]]() will do nothing*
 |}
 
 == Code Examples ==
@@ -25,7 +25,7 @@ You can add your code example here
 == Remarks ==
 ''You can add useful comments here''
 
-<<Color2(green,I don't think this note applies to this function but this function was listed with the group below in the header so I'll leave it because it's easier to delete than add when we're editing.)>>  If ,,the,, '''depth''' is 4 or 8 bits, an empty palette is allocated for the surface. If ,,the,, '''depth''' is greater than 8 bits, the pixel format is set using the flags '[RGB]mask'. 
+<<Color2(green,I don't think this note applies to this function but this function was listed with the group below in the header so I'll leave it because it's easier to delete than add when editing.)>>  If ,,the,, '''depth''' is 4 or 8 bits, an empty palette is allocated for the surface. If ,,the,, '''depth''' is greater than 8 bits, the pixel format is set using the flags '[RGB]mask'. 
 
 *<br/>Frees the resources used by a previously created [[SDL_Surface]]. If the surface was created using [[SDL_CreateRGBSurfaceFrom]]() then the pixel data is not freed.<br/>*
 
