--- a/SDL_GetSurfaceAlphaMod.mediawiki
+++ b/SDL_GetSurfaceAlphaMod.mediawiki
@@ -15,7 +15,7 @@ int SDL_GetSurfaceAlphaMod(SDL_Surface* surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|the [[SDL_Surface]] to query
+|the [[SDL_Surface]] structure to query
 |-
 |'''alpha'''
 |,,a pointer filled in with ,,the source alpha value
