--- a/SDL_SetSurfaceBlendMode.mediawiki
+++ b/SDL_SetSurfaceBlendMode.mediawiki
@@ -15,10 +15,10 @@ int SDL_SetSurfaceBlendMode(SDL_Surface*  surface,
 == Function Parameters ==
 {|
 |'''surface'''
-|the [[SDL_Surface]] to update
+|the [[SDL_Surface]] structure to update
 |-
 |'''blendMode'''
-|the [[SDL_BlendMode]] to use for blit blending; see [[#Remarks|Remarks]] for details
+|the [[SDL_BlendMode]] ,,enumeration,, ^value^ to use for blit blending; see [[#Remarks|Remarks]] for details
 |}
 
 == Return Value ==
