--- a/SDL_SysWMEvent.mediawiki
+++ b/SDL_SysWMEvent.mediawiki
@@ -12,7 +12,7 @@ A structure that contains a video driver dependent system event (event.syswm.*) 
 |'''type'''
 |SDL_SYSWMEVENT
 |-
-|SDL_SysWMmsg*
+|[[SDL_SysWMmsg]]*
 |'''msg'''
 |driver dependent data, defined in SDL_syswm.h
 |}
