--- a/SDL_WaitEvent.mediawiki
+++ b/SDL_WaitEvent.mediawiki
@@ -14,7 +14,7 @@ int SDL_WaitEvent(SDL_Event* event)
 == Function Parameters ==
 {|
 |'''event'''
-|if not NULL, the next event is removed from the queue and stored in that area ''-or-'' ^the [[SDL_Event]] structure to be filled with the next event from the queue, or NULL^
+|if not NULL, the next event is removed from the queue and stored in that area ''-or-'' ^the [[SDL_Event]] structure to be filled in with the next event from the queue, or NULL^
 |}
 
 == Return Value ==
