--- a/SDL_GetWindowData.mediawiki
+++ b/SDL_GetWindowData.mediawiki
@@ -13,7 +13,7 @@ void* SDL_GetWindowData(SDL_Window* window)
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to query
+|the window to query
 |}
 
 == Return Value ==
