--- a/SDL_GL_DeleteContext.mediawiki
+++ b/SDL_GL_DeleteContext.mediawiki
@@ -13,7 +13,7 @@ void SDL_GL_DeleteContext(SDL_GLContext context)
 == Function Parameters ==
 {|
 |'''context'''
-|the SDL_GLContext to be deleted
+|the OpenGL context to be deleted
 |}
 
 == Code Examples ==
