--- a/SDL_GL_MakeCurrent.mediawiki
+++ b/SDL_GL_MakeCurrent.mediawiki
@@ -14,7 +14,7 @@ int SDL_GL_MakeCurrent(SDL_Window*   window,
 == Function Parameters ==
 {|
 |'''window'''
-|the SDL_Window to associate with the context
+|the window to associate with the context
 |-
 |'''context'''
 |the OpenGL context to associate with the window
