update formatting - enums, structs, the/an

--- a/SDL_LockTexture.mediawiki
+++ b/SDL_LockTexture.mediawiki
@@ -17,7 +17,7 @@ int SDL_LockTexture(SDL_Texture*    texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to lock for access, which was created with SDL_TEXTUREACCESS_STREAMING
+|the texture to lock for access, which was created with SDL_TEXTUREACCESS_STREAMING
 |-
 |'''rect'''
 |an [[SDL_Rect]] structure representing the area to lock for access; NULL to lock the entire texture
