--- a/SDL_SetTextureAlphaMod.mediawiki
+++ b/SDL_SetTextureAlphaMod.mediawiki
@@ -14,7 +14,7 @@ int SDL_SetTextureAlphaMod(SDL_Texture* texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to update
+|the texture to update
 |-
 |'''alpha'''
 |the source alpha value multiplied into copy operations
