--- a/SDL_SetTextureColorMod.mediawiki
+++ b/SDL_SetTextureColorMod.mediawiki
@@ -16,7 +16,7 @@ int SDL_SetTextureColorMod(SDL_Texture* texture,
 == Function Parameters ==
 {|
 |'''texture'''
-|the SDL_Texture to update
+|the texture to update
 |-
 |'''r'''
 |the red source color value multiplied into copy operations
