update formatting - enums, structs, the/an

--- a/SDL_RectEmpty.mediawiki
+++ b/SDL_RectEmpty.mediawiki
@@ -13,7 +13,7 @@ SDL_bool SDL_RectEmpty(const SDL_Rect* rect)
 == Function Parameters ==
 {|
 |'''rect'''
-|the [[SDL_Rect]] to check
+|the [[SDL_Rect]] structure representing the rectangle to check
 |}
 
 == Return Value ==
