--- a/SDL_SetTextureBlendMode.mediawiki
+++ b/SDL_SetTextureBlendMode.mediawiki
@@ -17,7 +17,7 @@ int SDL_SetTextureBlendMode(SDL_Texture*  texture,
 |the texture to update
 |-
 |'''blendMode'''
-|the [[SDL_BlendMode]] ,,enumeration,, ^value^ to use for texture blending; see [[#blendMode|Remarks]] for details
+|the [[SDL_BlendMode]] to use for texture blending; see [[#blendMode|Remarks]] for details
 |}
 
 == Return Value ==
